<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">QuizGame</string>
    <string name="title_input_placeholder">Title</string>
    <string name="date_start_input_placeholder">Starting date</string>
    <string name="date_end_input_placeholder">End date</string>
    <string name="type_label">Questionnaire Type</string>
    <string name="public_label">Public?</string>
    <string name="questionnaire_form_title">Questionnaire</string>
    <string name="users_menu_item">Users</string>
    <string name="questionnaires_menu_item">Questionnaires</string>
    <string name="questions_menu_item">Questions</string>
    <string name="history_menu_item">History</string>
    <string name="settings_menu_item">Settings</string>
    <string name="contact_menu_item">Contact</string>
    <string name="about_menu_item">About</string>
    <string name="help_menu_item">Help</string>
    <string name="questionnaire_button">Save</string>
    <string name="play_game_button">Play game!</string>
    <string name="tv_name_user_profile">Nume si prenume preluate din BD</string>
    <string name="tv_role_user_profile">Rol preluat din bd</string>
    <string name="tv_id_user_profile">Id afisat din BD</string>
    <string name="button_history_user_profile">My History</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_confirm">Confirm</string>
    <string name="tv_question_placeholder">The question will be here.</string>
    <string name="tv_option_placeholder">Option n</string>
    <string name="question_form_title">Add new Question</string>
    <string name="question_name">Question: </string>
    <string name="question_answer1">Answer 1: </string>
    <string name="question_answer2">Answer 2: </string>
    <string name="question_answer3">Answer 3: </string>
    <string name="question_answer4">Answer 4: </string>
    <string name="add_question_btn_label">Add question</string>
    <string name="delete_question_btn_label">Delete question</string>
    <string name="list_question_btn_label">Questions list</string>
    <string name="what_is_the_question">The Question</string>
    <string name="placeholder_question_answer_1">The first answer</string>
    <string name="placeholder_question_answer_2">The second answer</string>
    <string name="placeholder_question_answer_3">The third answer</string>
    <string name="placeholder_question_answer_4">The fourth answer</string>
    <string name="placeholder_contact_fullname">Full Name:</string>
    <string name="placeholder_contact_email">Email:</string>
    <string name="placeholder_contact_subject">Subject:</string>
    <string name="placeholder_contact_your_question">Your question:</string>
    <string name="about_developed_by">Developed by: </string>
    <string name="about_team_name">Adela, Alex, Erik, Raluca</string>
    <string name="about_copyright_notice">2018 DAMProject Co - All rights reserved</string>
    <string name="show_code_text">Show Code</string>
    <string name="text_is_correct">Correct</string>
    <string name="return_text">Return</string>
    <string name="copyright_notice">2018 DAMProject Co - All rights reserved</string>
    <string name="text_phone">Phone: </string>
    <string name="text_contact_history">Contact history</string>
    <string name="text_send">Send</string>
    <string name="text_username">Username: </string>
    <string name="text_password">Password: </string>
    <string name="text_sign_in">SIGN IN</string>
    <string name="text_user_name">User Name: </string>
    <string name="text_name">Name: </string>
    <string name="text_email">Email: </string>
    <string name="text_role">Role: </string>
    <string name="text_create">CREATE</string>
    <string name="text_log_in">LOG IN</string>
    <string name="text_signup_title">Create Account</string>
    <string name="text_default_question_score">Score: 0</string>
    <string name="text_default_question_n_outof_m">Question: 0/0</string>
    <string name="text_default_question_duration">00:00</string>
    <string name="text_settings">Settings</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="question_time_placeholder">Time to answer (seconds)</string>
    <string name="text_correct">Correct</string>
    <string name="text_incorrect">Incorrect</string>

    <string name="contact_insert_question">You need to insert a question</string>
    <string name="contact_insert_name">You need to insert your name</string>
    <string name="custom_adapter_release_date">Release date </string>
    <string name="custom_adapter_no_action">No action</string>
    <string name="help_no_settings">No FAQ\'s yet, please return when we\'re out of alpha ;).</string>
    <string name="json_contact_not_over">Not over yet...</string>
    <string name="main_join_game">Join game room</string>
    <string name="main_enter_code">Enter your unique code :</string>
    <string name="main_ok">OK</string>
    <string name="main_cancel">CANCEL</string>
    <string name="main_error_no_code">You need to provide a code to enter the game.</string>
    <string name="main_already_logged_out">You are already logged out!</string>
    <string name="main_questionnaire_not_available">This questionnaire is only available between %s and %s.</string>
    <string name="main_not_logged_in">You have to log in to access this questionnaire!</string>
    <string name="question_form_error_insert_question">You need to insert a question!</string>
    <string name="question_form_error_insert_answer">You need to insert at least an answer!</string>
    <string name="question_form_error_insert_answers">You need to insert at least two answers!</string>
    <string name="question_form_success_question">Question %s successfully!</string>
    <string name="text_created">created</string>
    <string name="text_updated">updated</string>
    <string name="questionnaire_form_success_questionnaire">Questionnaire %s successfully!</string>
    <string name="questionnaire_form_add">Add</string>
    <string name="questionnaire_form_cancel">Cancel</string>
    <string name="questionnaire_form_unique_code">Unique Code</string>
    <string name="questionnaire_form_copy_code">COPY CODE</string>
    <string name="questionnaire_form_copy_success">The Code was copied to the clipboard!</string>
    <string name="questionnaire_form_ok">OK</string>
    <string name="response_activity_template">For questionnaire \'%s\' taken on %s by user \'%s\', the score was : %d</string>
    <string name="sign_in_enter_username">Please enter the username!</string>
    <string name="sign_in_enter_password">Please enter the correct password!</string>
    <string name="sign_in_bad_username_password">Incorrect username or password, please try again!</string>
    <string name="sign_in_bad_user">This user does not exist! Sign up to play the game!</string>
    <string name="sign_up_bad_user_name">Please enter a valid user name!</string>
    <string name="sign_up_bad_role">Please select a role!</string>
    <string name="sign_up_bad_password">Please enter a valid password!</string>
    <string name="sign_up_bad_name">Please enter a valid name!</string>
    <string name="sign_up_bad_email">Please enter the academic email address!</string>
    <string name="sign_up_user_saved">User saved or updated!</string>
    <string name="sign_up_user_not_changed">No change.</string>
    <string name="game_no_questions">This questionnaire has no questions.</string>
    <string name="template_help_question">%d. %s : %s from %s has asked: %s</string>
    <string name="no_help_questions">No help questions yet.</string>
    <string name="text_faqs">FAQ\'s read from file report:</string>
    <string name="successfully_saved_file">File successfully saved as %s</string>
    <string name="location_menu_item">Support centres</string>
    <string name="support_center">Support center, Sydney</string>
</resources>
